Add Plot do Poço junto com a seção

--- a/codes/Modelagem_Interativa.ipynb
+++ b/codes/Modelagem_Interativa.ipynb
@@ -24,6 +24,7 @@
     "import imageio as io\n",
     "from scipy.misc import imread, imsave, imresize\n",
     "import plotly as ply\n",
+    "import plotly.plotly as plyy\n",
     "import plotly.graph_objs as go\n",
     "import pandas as pd\n",
     "import random"
@@ -74,7 +75,7 @@
     "# criado para profunidades, e como o eixo z o plot de valores RGBA da matriz ma.\n",
     "# além disso, na função go.countour está listando as configurações pernsonalizadas para o colorbar\n",
     "\n",
-    "imagem = [go.Heatmap(z=ma[:,:,0],\n",
+    "imagem = go.Heatmap(z=ma[:,:,0],\n",
     "                         x=xi,\n",
     "                         y=zi,\n",
     "                    colorbar=dict(\n",
@@ -91,7 +92,7 @@
     "                        outlinewidth=0\n",
     "                    )\n",
     "                   )\n",
-    "          ]\n",
+    "          \n",
     "\n",
     "# a função go.Layout personaliza o layout do gráfico, no caso, colocando título nos eixos.\n",
     "# \"autorange=reversed\", da o comando para inverter o eixo y, no caso as profundidades, começando com 0 e os\n",
@@ -119,9 +120,8 @@
     "            plot_bgcolor='#c7c7c7' #cor do backgroud do gráfico\n",
     "    )\n",
     "\n",
-    "\n",
     "# a função go.FigureWidget cria o a figura com os parametros utilizados na go.Countour e o layout na go.Layout\n",
-    "fig = go.FigureWidget(data=imagem, layout=layout)\n",
+    "fig = go.FigureWidget(data=[imagem], layout=layout)\n",
     "\n",
     "#Selecionando as configurações dos dados de fig\n",
     "teste = fig.data[0]\n",
@@ -134,16 +134,15 @@
     "    x = list(teste.x)\n",
     "    y = list(teste.y)\n",
     "    for i in points.point_inds:\n",
-    "        y_data.append(i[0])\n",
-    "        x_data.append(i[1])\n",
+    "        y_data.append(zi[i[0]])\n",
+    "        x_data.append(xi[i[1]])\n",
     "        print(points.point_inds)\n",
-    "        \n",
+    "\n",
     "# Sempre que clicar no gráfico chamará a função de callback\n",
     "teste.on_click(select_point)\n",
     "\n",
     "# plot a figura na tela:\n",
     "fig\n",
-    "\n",
     "\n",
     "####### É NECESSÁRIO ESCOLHER DOIS PONTOS CLICANDO NO GRÁFICO GERADO PARA RODAR O RESTANTE DO SCRIPT #######"
    ]
@@ -154,18 +153,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#apenas rodar quando escolher dois pontos clicando no gráfico acima\n",
-    "mb = ( ma[ y_data[0]-1:y_data[1], x_data[0]-1:x_data[0] ] )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# para fazer plots dentro do proprio script sem a necessidade de conexao com a internet:\n",
+    "ply.offline.init_notebook_mode(connected=True)\n",
     "\n",
-    "#for i in range(y_data[0])"
+    "# funcao go.Contour faz um countour plot usando como eixo x, o xi criado para coordenadas, como o eixo y, o zi\n",
+    "# criado para profunidades, e como o eixo z o plot de valores RGBA da matriz ma.\n",
+    "# além disso, na função go.countour está listando as configurações pernsonalizadas para o colorbar\n",
+    "\n",
+    "imagem = go.Heatmap(z=ma[:,:,0],\n",
+    "                         x=xi,\n",
+    "                         y=zi,\n",
+    "                    colorbar=dict(\n",
+    "                        title='RGBA',\n",
+    "                        titleside='right',\n",
+    "                        titlefont=dict(\n",
+    "                            size=14,\n",
+    "                            family='Arial, sans-serif'\n",
+    "                        ),\n",
+    "                        thickness=25,\n",
+    "                        thicknessmode='pixels',\n",
+    "                        len=0.9,\n",
+    "                        lenmode='fraction',\n",
+    "                        outlinewidth=0\n",
+    "                    )\n",
+    "                   )\n",
+    "          \n",
+    "\n",
+    "# a função go.Layout personaliza o layout do gráfico, no caso, colocando título nos eixos.\n",
+    "# \"autorange=reversed\", da o comando para inverter o eixo y, no caso as profundidades, começando com 0 e os\n",
+    "# aumentando p/ baixo.\n",
+    "layout = go.Layout(\n",
+    "            xaxis= dict(title='Distância',\n",
+    "                        side ='top',\n",
+    "                        color = 'white'\n",
+    "                   ),\n",
+    "            yaxis= dict(title='Profundidade',\n",
+    "                        autorange='reversed',\n",
+    "                        color = 'white'\n",
+    "                   ),\n",
+    "            # define o tamanho do gráfico, altura e largura, e o tamanhado da margem (l=left, r=right, b=bottom, t=top)\n",
+    "            autosize=False,\n",
+    "            width=1000,\n",
+    "            height=500,\n",
+    "            margin=go.layout.Margin(\n",
+    "                l=50,\n",
+    "                r=30,\n",
+    "                b=20,\n",
+    "                t=60\n",
+    "            ),\n",
+    "            paper_bgcolor='#7f7f7f', #cor do background da margem\n",
+    "            plot_bgcolor='#c7c7c7' #cor do backgroud do gráfico\n",
+    "    )\n",
+    "\n",
+    "imagem2 = go.Scatter(x=x_data,y=y_data)\n",
+    "\n",
+    "data = [imagem, imagem2]\n",
+    "\n",
+    "fig = go.FigureWidget(data=data, layout=layout)\n",
+    "\n",
+    "# plot a figura na tela:\n",
+    "fig"
    ]
   },
   {
@@ -174,7 +221,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.shape(mb)"
+    "#apenas rodar quando escolher dois pontos clicando no gráfico acima\n",
+    "#definindo a dimensão do poço sintético\n",
+    "mb = (ma[y_data[0]-1:y_data[1], x_data[0]-1:x_data[0]])"
    ]
   },
   {
@@ -200,19 +249,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TODO:\n",
-    "###   1) Usar o plotly para plotar o poço interativamente, ou seja, no \"ato de perfilar\" com os cliques do mouse;   \n",
-    "### 4) Criar poços direcionais (futuro);\n",
-    "### 5) A pensar: Como plotar RGBA usando uma função do plotly;\n",
-    "### 7) COmo seria fazer vários poços na mesma janela de plot?\n",
-    "\n",
-    "### 8) Limpar o codigo criando funções (plolty, da soma dos RBG)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Leitura do banco de dados de input, fornecido pelo usuario (litologias, RBG, rho)"
    ]
   },
@@ -223,16 +259,8 @@
    "outputs": [],
    "source": [
     "cab = ['lito', 'R','G','B','A', 'rho']\n",
-    "data = pd.read_csv('../dados/input_usuario.txt', sep='\\s+', names=cab, header=0 )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data"
+    "data = pd.read_csv('../dados/input_usuario.txt', sep='\\s+', names=cab, header=0 )\n",
+    "print(data)"
    ]
   },
   {
@@ -242,25 +270,9 @@
    "outputs": [],
    "source": [
     "# Somando os RBGA:\n",
-    "soma = data.R + data.B + data.G+data.A"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "soma = data.R + data.G + data.B + data.A\n",
+    "#adicionando a coluna 'soma' na tabela de dados:\n",
     "data['soma']= soma"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data.soma[0]"
    ]
   },
   {
@@ -309,33 +321,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rhob_noise"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO: fazer o perfil de VS a partir de rhob:\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prof = np.linspace(zi[y_data[0]], zi[y_data[1]], len(rhob) )"
+    "#Criando o vetor de profundidade:\n",
+    "prof = np.linspace(zi[y_data[0]], zi[y_data[1]], len(rhob))"
    ]
   },
   {
@@ -385,6 +372,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## TODO:\n",
+    "### 1) Usar o plotly para plotar o poço interativamente, ou seja, no \"ato de perfilar\" com os cliques do mouse;   \n",
+    "### 2) Criar poços direcionais (futuro);\n",
+    "### 3) Como seria fazer vários poços na mesma janela de plot?\n",
+    "### 4) Limpar o codigo criando funções (plolty, da soma dos RBG)\n",
+    "### 5) fazer o perfil de VS a partir de rhob (Gardner)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Para saber mais sobre a go.Countour:\n",
     "\n",
     "### https://plot.ly/python/contour-plots/\n",
@@ -408,7 +407,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
