add color comparison between the whole set of colors and the colors comprising the well.

--- a/codes/Modelagem_Interativa.ipynb
+++ b/codes/Modelagem_Interativa.ipynb
@@ -37,8 +37,7 @@
    "outputs": [],
    "source": [
     "#Leitura da imagem (.png) com o modelo geológico\n",
-    "#ma = io.imread(\"../figs/amazonas.png\", as_gray=False, pilmode=\"RGBA\") # verificar no inkscape!\n",
-    "ma = io.imread(\"../figs/amazonas.png\", as_gray=False, pilmode=\"RGB\")\n",
+    "ma = io.imread(\"../figs/amazonas.png\", as_gray=False, pilmode=\"RGBA\") # verificar no inkscape!\n",
     "plt.style.use(['classic'])\n",
     "py.rcParams['figure.figsize'] = (15.0, 20.0) #new figure dimension\n",
     "plt.title(\"Modelo - Bacia do Amazonas\")\n",
@@ -127,15 +126,20 @@
     "teste = fig.data[0]\n",
     "x_data = []\n",
     "y_data = []\n",
+    "indx = []\n",
+    "indy = []\n",
     "\n",
     "# criando a função de callback\n",
     "# para selecionar o ponto inicial e final da perfuração simulada do poço sintético \n",
     "def select_point(trace, points, selector):\n",
     "    x = list(teste.x)\n",
     "    y = list(teste.y)\n",
+    "    \n",
     "    for i in points.point_inds:\n",
     "        y_data.append(zi[i[0]])\n",
     "        x_data.append(xi[i[1]])\n",
+    "        indx.append( i[1] )\n",
+    "        indy.append( i[0] )\n",
     "        print(points.point_inds)\n",
     "\n",
     "# Sempre que clicar no gráfico chamará a função de callback\n",
@@ -221,16 +225,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#apenas rodar quando escolher dois pontos clicando no gráfico acima\n",
-    "#definindo a dimensão do poço sintético\n",
-    "mb = (ma[y_data[0]-1:y_data[1], x_data[0]-1:x_data[0]])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Estabelecendo critério de soma das rbga para construção do poço sintético:"
+    "x_data"
    ]
   },
   {
@@ -239,10 +234,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# calculando as somas das cores para definir\n",
-    "lito = [] # soma das cores do rbga = r+b+g+a:\n",
-    "for i in range( len(mb) ):\n",
-    "    lito.append(sum(mb[i][0]))"
+    "#apenas rodar quando escolher dois pontos clicando no gráfico acima\n",
+    "#definindo a dimensão do poço sintético\n",
+    "mb = (ma[indy[0]-1:indy[1], indx[0]-1:indx[0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.shape(mb)"
    ]
   },
   {
@@ -264,15 +267,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Teste para comparar litologias do poço perfurado com a cor estabelecida:\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Somando os RBGA:\n",
-    "soma = data.R + data.G + data.B + data.A\n",
+    "D = (data.R**2 + data.G**2 + data.B**2 + data.A**2)**0.5\n",
     "#adicionando a coluna 'soma' na tabela de dados:\n",
-    "data['soma']= soma"
+    "data['DistCor'] = D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lito = []\n",
+    "for i in range(len(mb)):\n",
+    "    de = (mb[i,0,0]**2 + mb[i,0,1]**2 + mb[i,0,2]**2 + mb[i,0,3]**2)**0.5\n",
+    "    lito.append( de )"
    ]
   },
   {
@@ -377,7 +408,9 @@
     "### 2) Criar poços direcionais (futuro);\n",
     "### 3) Como seria fazer vários poços na mesma janela de plot?\n",
     "### 4) Limpar o codigo criando funções (plolty, da soma dos RBG)\n",
-    "### 5) fazer o perfil de VS a partir de rhob (Gardner)"
+    "### 5) fazer o perfil de VS a partir de rhob (Gardner)\n",
+    "### NOVO TODO:\n",
+    "### 1.1) Generalizar para N litologias (atualmente são quatro);\n"
    ]
   },
   {
@@ -407,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
